First shot at project

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+  
     </head>
     
     <body>
-	
+  <h1>My Five Favorite Pets</h1>	
+  <h2>Dog</h2>
+  <p> I always had contact with dogs. Since I can remember I always loved playing with them.
+   <hr>  <h2> Cat </h2>
+   <p> 
     </body>
 </html>
