--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h2>Dog</h2>
   <p> I always had contact with dogs. Since I can remember I always loved playing with them.
    <hr>  <h2> Cat </h2>
-   <p> 
+   <p> I never had a cat, but I want to have one some day.
+  <hr> <h2> Snakes</h2> 
     </body>
 </html>
