--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <body>
   <h1>My Five Favorite Pets</h1>	
   <h2>Dog</h2>
-  <p> I always had contact with dogs. Since I can remember I always loved playing with them.
+  <h3> <i> Canis lupus familiaris </i> </h3>
+  <p> I always had contact with dogs. Since I can remember I always loved playing with them.</p>
    <hr>  <h2> Cat </h2>
-   <p> I never had a cat, but I want to have one some day.
-  <hr> <h2> Snakes</h2> 
+   <h3><i> Felis catus</i> </h3>
+   <p> I never had a cat, but I want to have one some day. My great grandmother have cats and they're very adorable.</p>
+  <hr> <h2> Horse</h2> 
+  <h3><i> Equus Caballus</i></h3>
+  <p> When I was younger I wanted to be a veterinarian and work with horses.</p>
+  <hr><h2> Rabbit </h2>
+  <h3><i>Oryctolagus Cuniculus Domesticus</i></h3>
+  <p> I would like to have a rabbit in the future. They seem fun to care.</p>
+  <hr><h2>Chameleon</h2>
+  <h3><i>Chamaeleo calyptratus</i></h3>
+    <p> I fing repitiles fascinating and would like to take care of one.</p>
     </body>
 </html>
