--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-  
-    </head>
-    
-    <body>
-  <h1>My Five Favorite Pets</h1>	
-  <h2>Dog</h2>
-  <h3> <i> Canis lupus familiaris </i> </h3>
+
+<head>
+ <title> Lara Paulino-Favorite Pets </title>
+</head>
+
+<body>
+	<h1>My Five Favorite Pets</h1>
+	<h2>Dog</h2>
+	<h3> <i> Canis lupus familiaris </i> </h3>
   <p> I always had contact with dogs. Since I can remember I always loved playing with them.</p>
    <hr>  <h2> Cat </h2>
    <h3><i> Felis catus</i> </h3>
