--- a/index.html
+++ b/index.html
@@ -2,21 +2,63 @@
 <html>
 
 <head>
- <title> Lara Paulino-Favorite Pets </title>
+	<title> Lara Paulino-Favorite Pets </title>
 </head>
 
 <body>
 	<h1>My Five Favorite Pets</h1>
 	<h2>Dog</h2>
-	<h3> <i> Canis lupus familiaris </i> </h3>
-  <p> I always had contact with dogs. Since I can remember I always loved playing with them.</p>
+
+	<img src="https://media4.s-nbcnews.com/i/newscms/2019_23/2885811/190606-border-collie-mc-1318_5b1706791f4ae9ddb3029540a98f7e08.JPG"
+   width= "200"
+   alt="dog">
+  
+  <img src = "dog.jpg"
+   width ="200"
+   alt ="pitbull">
+
+  <br>
+  <h3><i> Canis lupus familiaris </i> </h3>
+  <p> I always had contact with dogs. Since I can remember I  love playing with them.</p>
    <hr>  <h2> Cat </h2>
-   <h3><i> Felis catus</i> </h3>
-   <p> I never had a cat, but I want to have one some day. My great grandmother have cats and they're very adorable.</p>
+
+  <img        
+  src= "https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/slideshows/is_my_cat_normal_slideshow/1800x1200_is_my_cat_normal_slideshow.jpg"
+   width="200"
+   alt="cat">
+
+  <img src= "acat.jpg"
+   width= "200"
+   alt= "funny cat">
+ <br>
+ <h3><i> Felis catus</i> </h3>
+  <p> I never had a cat, but I want to have one some day. My great grandmother have cats and they're very adorable.</p>
   <hr> <h2> Horse</h2> 
+
+   <img src="https://horsej-intellectsolutio.netdna-ssl.com/cdn/farfuture/SVD1oaF2ITMncqEBjp-F4wIPN3Iqw8M25m7mvjCT1-Q/mtime:1543626961/files/styles/article_large/public/pictures-videos/blogs/shutterstock_250751620_-_grigorita_ko_-_web.jpg?itok=dr2UJXfv"
+   width= "200"
+   alt="horse running">
+   
+   <img src= "https://equimanagement.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MTcyNTA2Mjk5MjQ0NzQ5OTA3/tongue-out-horse-head-istock-alexandra-surkova-1192159893-2400.jpg"
+   width="170"
+   alt= "funny horse"
+   
+   <br>
+
   <h3><i> Equus Caballus</i></h3>
   <p> When I was younger I wanted to be a veterinarian and work with horses.</p>
   <hr><h2> Rabbit </h2>
+
+  <img src= "https://www.telegraph.co.uk/content/dam/news/2019/10/13/TELEMMGLPICT000211570538-xlarge_trans_NvBQzQNjv4Bq1AT3Q7Sc9uaffdHBes0nLkYMapKPjdhyLnv9ax6_too.jpeg"
+  width="200"
+  alt="rabbit">
+
+  <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/rabbit-breeds-1554150240.jpg?crop=0.963xw:0.724xh;0.0321xw,0.0865xh&resize=1200:*"
+  width="200"
+  alt="cute rabbits">
+
+  <br>
+
   <h3><i>Oryctolagus Cuniculus Domesticus</i></h3>
   <p> I would like to have a rabbit in the future. They seem fun to care.</p>
   <hr><h2>Chameleon</h2>
