--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <!--add one link to another website that gives some information about the pet you chose-->
+	<!--add links to another website that gives some information about the pet you chose-->
 
 	<h1>My Five Favorite Pets</h1>
 	<h2>Dog</h2>
