--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 
 <head>
-	<title> Lara Paulino-Favorite Pets </title>
+	<title> My Favorite Pets - Lara Paulino </title>
 </head>
 
 <body>
-	<!--add links to another website that gives some information about the pet you chose-->
 
 	<h1>My Five Favorite Pets</h1>
 	<h2>Dog</h2>
@@ -18,15 +17,15 @@
   <img src = "dog.jpg"
    width ="200"
    alt ="pitbull">
-
   <br>
   <h3><i> Canis lupus familiaris </i> </h3>
-  <p> I always had contact with dogs. Since I can remember I  love playing with them.</p>
+  <p>I always had contact with dogs. Since I can remember they make my day better.</p>
+  <a href="https://animaldiversity.org/accounts/Canis_lupus_familiaris/"> Learn more about the specie.</a>
    <hr>  <h2> Cat </h2>
 
   <img        
   src= "https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/slideshows/is_my_cat_normal_slideshow/1800x1200_is_my_cat_normal_slideshow.jpg"
-   width="200"
+   width="235"
    alt="cat">
 
   <img src= "acat.jpg"
@@ -35,20 +34,22 @@
  <br>
  <h3><i> Felis catus</i> </h3>
   <p> I never had a cat, but I want to have one some day. My great grandmother have cats and they're very adorable.</p>
+  <a href="https://animaldiversity.org/accounts/Felis_catus/"> Learn more about the specie.</a>
   <hr> <h2> Horse</h2> 
 
    <img src="https://horsej-intellectsolutio.netdna-ssl.com/cdn/farfuture/SVD1oaF2ITMncqEBjp-F4wIPN3Iqw8M25m7mvjCT1-Q/mtime:1543626961/files/styles/article_large/public/pictures-videos/blogs/shutterstock_250751620_-_grigorita_ko_-_web.jpg?itok=dr2UJXfv"
-   width= "200"
+   width= "210"
    alt="horse running">
    
    <img src= "https://equimanagement.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cfl_progressive%2Cq_auto:good%2Cw_1200/MTcyNTA2Mjk5MjQ0NzQ5OTA3/tongue-out-horse-head-istock-alexandra-surkova-1192159893-2400.jpg"
-   width="170"
+   width="164"
    alt= "funny horse">
    
    <br>
 
   <h3><i> Equus Caballus</i></h3>
   <p> When I was younger I wanted to be a veterinarian and work with horses.</p>
+  <a href="https://animaldiversity.org/accounts/Equus_caballus/">Learn more about the specie.</a>     
   <hr><h2> Rabbit </h2>
 
   <img src= "https://www.telegraph.co.uk/content/dam/news/2019/10/13/TELEMMGLPICT000211570538-xlarge_trans_NvBQzQNjv4Bq1AT3Q7Sc9uaffdHBes0nLkYMapKPjdhyLnv9ax6_too.jpeg"
@@ -56,13 +57,14 @@
   alt="rabbit">
 
   <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/rabbit-breeds-1554150240.jpg?crop=0.963xw:0.724xh;0.0321xw,0.0865xh&resize=1200:*"
-  width="200"
+  width="250"
   alt="cute rabbits">
-
   <br>
 
   <h3><i>Oryctolagus Cuniculus Domesticus</i></h3>
-  <p> I would like to have a rabbit in the future. They seem fun to care.</p>
+  <p> Rabbits seem fun to care. I would like to have one in the future.</p>
+  <a href="https://animaldiversity.org/accounts/Oryctolagus_cuniculus/">Learn more about the specie.</a>
+  <br>
   <hr><h2>Chameleon</h2>
 
   <img src="https://s7d2.scene7.com/is/image/PetSmart/ARHERO-ChameleonCareGuide-20161213?$AR0301$"
@@ -74,10 +76,8 @@
   width="200"
   alt="funny chameleon">
 
-  <br>
-
   <h3><i>Chamaeleo calyptratus</i></h3>
-    <p> I fing repitiles fascinating and would like to take care of one.</p> 
-
+    <p> I find repitiles fascinating. Chameleons are fun because they can change their skin color. </p> 
+<a href="https://animaldiversity.org/accounts/Chamaeleo_calyptratus/"> Learn more about the specie.</a>
     </body>
 </html>
