--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<title> My Favorite Pets - Lara Paulino </title>
 </head>
 
-<body>
+<body style="background:LightCyan">
 
-	<h1>My Five Favorite Pets</h1>
-	<h2>Dog</h2>
+	<h1 style="text-align:center"><u> My Five Favorite Pets</u></h1>
+	<h2 style="color:deeppink">Dog</h2>
 
 	<img src="https://media4.s-nbcnews.com/i/newscms/2019_23/2885811/190606-border-collie-mc-1318_5b1706791f4ae9ddb3029540a98f7e08.JPG"
    width= "200"
@@ -18,10 +18,10 @@
    width ="200"
    alt ="pitbull">
    <br>
-  <h3><i> Canis lupus familiaris </i> </h3>
-  <p>I always had contact with dogs. Since I can remember they make my day better.</p>
-  <a href="https://animaldiversity.org/accounts/Canis_lupus_familiaris/"> Learn more about the specie.</a>
-   <hr>  <h2> Cat </h2>
+  <h3 style="color:darkblue"><i> Canis lupus familiaris </i> </h3>
+  <p style="color:forestgreen;font-size:20px">I always had contact with dogs. Since I can remember they make my day better.</p>
+  <a href="https://animaldiversity.org/accounts/Canis_lupus_familiaris/"><p style="font-size:25px"> Learn more about the specie.</p></a>
+   <hr><h2 style="color:deeppink"> Cat </h2>
 
   <img        
   src= "https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/article_thumbnails/slideshows/is_my_cat_normal_slideshow/1800x1200_is_my_cat_normal_slideshow.jpg"
@@ -32,10 +32,10 @@
    width= "200"
    alt= "funny cat">
  <br>
- <h3><i> Felis catus</i> </h3>
-  <p> I never had a cat, but I want to have one some day. My great grandmother have cats and they're very adorable.</p>
-  <a href="https://animaldiversity.org/accounts/Felis_catus/"> Learn more about the specie.</a>
-  <hr> <h2> Horse</h2> 
+ <h3 style="color:darkblue"><i> Felis catus</i> </h3>
+  <p style="color:forestgreen;font-size:20px"> I never had a cat, but I want to have one some day. My great grandmother have cats and they're very adorable.</p>
+  <a href="https://animaldiversity.org/accounts/Felis_catus/"><p style="font-size:25px"> Learn more about the specie.</p></a>
+  <hr>	<h2 style="color:deeppink"> Horse</h2> 
 
    <img src="https://horsej-intellectsolutio.netdna-ssl.com/cdn/farfuture/SVD1oaF2ITMncqEBjp-F4wIPN3Iqw8M25m7mvjCT1-Q/mtime:1543626961/files/styles/article_large/public/pictures-videos/blogs/shutterstock_250751620_-_grigorita_ko_-_web.jpg?itok=dr2UJXfv"
    width= "210"
@@ -47,10 +47,10 @@
    
    <br>
 
-  <h3><i> Equus Caballus</i></h3>
-  <p> When I was younger I wanted to be a veterinarian and work with horses.</p>
-  <a href="https://animaldiversity.org/accounts/Equus_caballus/">Learn more about the specie.</a>     
-  <hr><h2> Rabbit </h2>
+   <h3 style="color:darkblue"><i> Equus Caballus</i></h3>
+  <p style="color:forestgreen;font-size:20px"> When I was younger I wanted to be a veterinarian and work with horses.</p>
+  <a href="https://animaldiversity.org/accounts/Equus_caballus/"><p style="font-size:25px"> Learn more about the specie.</p></a>     
+  <hr>	<h2 style="color:deeppink">Rabbit </h2>
 
   <img src= "https://www.telegraph.co.uk/content/dam/news/2019/10/13/TELEMMGLPICT000211570538-xlarge_trans_NvBQzQNjv4Bq1AT3Q7Sc9uaffdHBes0nLkYMapKPjdhyLnv9ax6_too.jpeg"
   width="200"
@@ -61,11 +61,11 @@
   alt="cute rabbits">
   <br>
 
-  <h3><i>Oryctolagus Cuniculus Domesticus</i></h3>
-  <p> Rabbits seem fun to care. I would like to have one in the future.</p>
-  <a href="https://animaldiversity.org/accounts/Oryctolagus_cuniculus/">Learn more about the specie.</a>
+   <h3 style="color:darkblue"><i>Oryctolagus Cuniculus Domesticus</i></h3>
+  <p style="color:forestgreen;font-size:20px"> Rabbits seem fun to care. I would like to have one in the future.</p>
+  <a href="https://animaldiversity.org/accounts/Oryctolagus_cuniculus/"><p style="font-size:25px"> Learn more about the specie.</p></a>
   <br>
-  <hr><h2>Chameleon</h2>
+  <hr>	<h2 style="color:Deeppink">Chameleon</h2>
 
   <img src="https://s7d2.scene7.com/is/image/PetSmart/ARHERO-ChameleonCareGuide-20161213?$AR0301$"
   width="300"
@@ -76,8 +76,8 @@
   width="200"
   alt="funny chameleon">
 
-  <h3><i>Chamaeleo calyptratus</i></h3>
-    <p> I find repitiles fascinating. Chameleons are fun because they can change their skin color. </p> 
-<a href="https://animaldiversity.org/accounts/Chamaeleo_calyptratus/"> Learn more about the specie.</a>
+  <h3 style="color:darkblue"><i>Chamaeleo calyptratus</i></h3>
+    <p style="color:forestgreen;font-size:20px"> I find repitiles fascinating. Chameleons are fun because they can change their skin color. </p> 
+<a href="https://animaldiversity.org/accounts/Chamaeleo_calyptratus/"><p style="font-size:25px"> Learn more about the specie.</p> </a>
     </body>
 </html>
